tests/solidity-semantic-tests/out/errors/error_throw_from_module_via_member_access/CContract.clear.teal
#pragma version 12
#pragma typetrack false

// /tmp/multisource_f1s5l40z/C.sol.CContract.clear_state_program() -> uint64:
main:
    pushint 1
    return
